goechoapp-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goechoapp-envoy-deploy
  labels:
    app: envoy-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-sidecar
  template:
    metadata:
      name: envoy-sidecar-pod
      labels:
        app: envoy-sidecar
    spec:
      containers:
        # The application being proxied.
        - name: goechoapp
          image: "akoserwal/goechoapp"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
        # The sidecar.
        - name: sidecar
          image: envoyproxy/envoy:v1.15-latest
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: sidecar-config
              mountPath: "/etc/envoy"
              readOnly: true
            - name: sidecar-certs
              mountPath: "/certs"
              readOnly: true
      volumes:
        - name: sidecar-config
          configMap:
            name: envoy-sidecar-configmap
        - name: sidecar-certs
          secret:
            secretName: envoy-sidecar-secret
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-sidecar-configmap
  labels:
    app: envoy-sidecar
data:
  envoy.yaml: |
    # Simple Envoy TLS terminating sidecar configuration.
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
              http_filters:
              - name: envoy.filters.http.router
                typed_config: {}
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/certs/tls.crt"
                  private_key:
                    filename: "/certs/tls.key"
      clusters:
      - name: local_service
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 3000
    admin:
      access_log_path: /dev/null
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8082
---
apiVersion: v1
kind: Secret
metadata:
  name: envoy-sidecar-secret
  labels:
    app: envoy-sidecar
type: kubernetes.io/tls
data:
  # localhost self-signed certificate.
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lVQVNJTXJyNlRuMzI5bHpteC82RTcxeDZCU0RVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0piRzlqWVd4b2IzTjBNQjRYRFRJME1ERXhNekE0TVRVME1sb1hEVEkwTURJeApNakE0TVRVME1sb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBMWlzVDFFOTYzTEllMDd1bEdzaTgvQmV1WExkN0JoQWdZSGxqeUFJOWNQM08KbGpsK2h2QUo4OExTN3RUZlkwdXpQQkR5bU9ITGl4bkJ4bEg0VGdCeEZaQ0tLYU5STzl4c2J4L0prVjhmRGpHYgovcTAya1pTYm5EVXNHN [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFdLeFBVVDNyY3NoN1QKdTZVYXlMejhGNjVjdDNzR0VDQmdlV1BJQWoxdy9jNldPWDZHOEFuend0THUxTjlqUzdNOEVQS1k0Y3VMR2NIRwpVZmhPQUhFVmtJb3BvMUU3M0d4dkg4bVJYeDhPTVp2K3JUYVJsSnVjTlN3Ym1sUVhMTmVkanRmMTYzTjFUSWViCjVDcm0vWGhZOGJZK3hJUTJYZ0dYNnBJMjhJTXhzSEZ3WjR4MEIyRDlKcC9MV1V6TkRrdk01elUwU0JNZi92UDMKNzgyV1hZZ1NNV2xWeXo5UEcraXpkdVJqMlNPZkV5ZFVuM1I3dStYMDRWbitjb2hYeWhKamVOcnorRjl5RnFWbgp4RCtTN05NVThyVHFCV [...]
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: envoy-sidecar-service
  labels:
    app: envoy-sidecar
spec:
  type: NodePort
  selector:
    app: envoy-sidecar
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30000
